Fix header alignment  issues in settings,offline indicator issues in choose daemon dropdown

--- a/stylesheets/_bchat.scss
+++ b/stylesheets/_bchat.scss
@@ -1149,7 +1149,7 @@ label {
     }
   }
 
-  &-wallet {
+  &-header{
     display: flex;
     flex-direction: row;
     justify-content: center;
